<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bit45.thespeedtester.ResultDetailActivity"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background = "@color/main_background">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- The Title Bar -->
        <LinearLayout
            android:id = "@+id/result_detail_title"
            android:orientation = "horizontal"
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:paddingTop="@dimen/result_detail_title_padding_vertical"
            android:paddingBottom="@dimen/result_detail_title_padding_vertical"
            android:background="@color/main_app_color">
            <!--TITLE LOGO-->
            <com.bit45.thespeedtester.font.FontelloTextView
                android:id="@+id/dlg_title_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/result_detail_icon_title_minWidth"
                android:textSize="@dimen/result_detail_icon_title"
                android:text="@string/icon_label_chart"
                android:textColor="@color/main_text"
                android:gravity="center_horizontal"
                />
            <!--TITLE TEXT-->
            <com.bit45.thespeedtester.font.RobotoTextView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/title_result_detail_activity"
                android:textSize="@dimen/result_detail_text_title"
                android:textColor="@color/main_text"
                app:typeface="robotoBlack"
                android:layout_gravity = "center_vertical"
                />
        </LinearLayout>

        <!--INFO PANEL-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Network INFO PANEL -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/alt_background"
                android:layout_margin="0dp">

                <!--Network ICON-->
                <com.bit45.thespeedtester.font.FontelloTextView
                    style="@style/IconStyle"
                    android:text="@string/icon_label_network"
                    tools:ignore="SpUsage"/>

                <!--Network CONSTANT-->
                <com.bit45.thespeedtester.font.RobotoTextView
                    style="@style/LabelStyle.Constant"
                    android:text="@string/label_network"
                    tools:ignore="SpUsage" />

                <!--Network VARIABLE-->
                <com.bit45.thespeedtester.font.RobotoTextView
                    style="@style/LabelStyle.Variable"
                    android:text="@string/label_variable_zero"
                    tools:ignore="SpUsage"
                    android:id="@+id/rbNetworkInfo"
                    android:singleLine="true"/>

            </LinearLayout>

            <!-- Connection INFO PANEL -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_background"
                android:layout_margin="0dp">

                <!--Connection ICON-->
                <com.bit45.thespeedtester.font.FontelloTextView
                    android:id="@+id/icon_connection"
                    style="@style/IconStyle"
                    android:text="@string/icon_label_connection_wifi"
                    tools:ignore="SpUsage"/>

                <!--Connection CONSTANT-->
                <com.bit45.thespeedtester.font.RobotoTextView
                    style="@style/LabelStyle.Constant"
                    android:text="@string/label_connection"
                    tools:ignore="SpUsage" />

                <!--Connection VARIABLE-->
                <com.bit45.thespeedtester.font.RobotoTextView
                    style="@style/LabelStyle.Variable"
                    android:text="@string/label_variable_zero"
                    tools:ignore="SpUsage"
                    android:id="@+id/rbConnectionInfo"/>

            </LinearLayout>

            <!-- Speed INFO PANEL -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/alt_background"
                android:layout_margin="0dp">

                <!--Speed ICON-->
                <com.bit45.thespeedtester.font.FontelloTextView
                    style="@style/IconStyle"
                    android:text="@string/icon_label_speed"
                    tools:ignore="SpUsage"/>

                <!--Speed CONSTANT-->
                <com.bit45.thespeedtester.font.RobotoTextView
                    style="@style/LabelStyle.Constant"
                    android:text="@string/label_speed"
                    tools:ignore="SpUsage" />

                <!--Speed VARIABLE-->
                <com.bit45.thespeedtester.font.RobotoTextView
                    style="@style/LabelStyle.Variable"
                    android:text="@string/label_variable_zero"
                    tools:ignore="SpUsage"
                    android:id="@+id/rbSpeedInfo"/>

            </LinearLayout>

            <!-- Downloaded INFO PANEL -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_background"
                android:layout_margin="0dp">

                <!--Downloaded ICON-->
                <com.bit45.thespeedtester.font.FontelloTextView
                    style="@style/IconStyle"
                    android:text="@string/icon_label_downloaded"
                    tools:ignore="SpUsage"/>

                <!--Downloaded CONSTANT-->
                <com.bit45.thespeedtester.font.RobotoTextView
                    style="@style/LabelStyle.Constant"
                    android:text="@string/label_downloaded"
                    tools:ignore="SpUsage" />

                <!--Downloaded VARIABLE-->
                <com.bit45.thespeedtester.font.RobotoTextView
                    style="@style/LabelStyle.Variable"
                    android:text="@string/label_variable_zero"
                    tools:ignore="SpUsage"
                    android:id="@+id/rbDownloadedInfo"/>

            </LinearLayout>

            <!-- Duration INFO PANEL -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/alt_background"
                android:layout_margin="0dp">

                <!--Duration ICON-->
                <com.bit45.thespeedtester.font.FontelloTextView
                    style="@style/IconStyle"
                    android:text="@string/icon_label_duration"
                    tools:ignore="SpUsage"/>

                <!--Duration CONSTANT-->
                <com.bit45.thespeedtester.font.RobotoTextView
                    style="@style/LabelStyle.Constant"
                    android:text="@string/label_duration"
                    tools:ignore="SpUsage" />

                <!--Duration VARIABLE-->
                <com.bit45.thespeedtester.font.RobotoTextView
                    style="@style/LabelStyle.Variable"
                    android:text="@string/label_variable_zero"
                    tools:ignore="SpUsage"
                    android:id="@+id/rbDurationInfo"/>

            </LinearLayout>

            <!-- Date INFO PANEL -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_background"
                android:layout_margin="0dp">

                <!--Date ICON-->
                <com.bit45.thespeedtester.font.FontelloTextView
                    style="@style/IconStyle"
                    android:text="@string/icon_label_date"
                    tools:ignore="SpUsage"/>

                <!--Date CONSTANT-->
                <com.bit45.thespeedtester.font.RobotoTextView
                    style="@style/LabelStyle.Constant"
                    android:text="@string/label_date"
                    tools:ignore="SpUsage" />

                <!--Date VARIABLE-->
                <com.bit45.thespeedtester.font.RobotoTextView
                    style="@style/LabelStyle.Variable"
                    android:text="@string/label_variable_zero"
                    tools:ignore="SpUsage"
                    android:id="@+id/rbDateInfo"/>

            </LinearLayout>

            <!-- Time INFO PANEL -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/alt_background"
                android:layout_margin="0dp">

                <!--Time ICON-->
                <com.bit45.thespeedtester.font.FontelloTextView
                    style="@style/IconStyle"
                    android:text="@string/icon_label_time"
                    tools:ignore="SpUsage"/>

                <!--Time CONSTANT-->
                <com.bit45.thespeedtester.font.RobotoTextView
                    style="@style/LabelStyle.Constant"
                    android:text="@string/label_time"
                    tools:ignore="SpUsage" />

                <!--Time VARIABLE-->
                <com.bit45.thespeedtester.font.RobotoTextView
                    style="@style/LabelStyle.Variable"
                    android:text="@string/label_variable_zero"
                    tools:ignore="SpUsage"
                    android:id="@+id/rbTimeInfo"/>

            </LinearLayout>

        </LinearLayout>

        <!-- BUTTONS PANEL -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@drawable/border_top">

            <!-- DELETE BUTTON -->
            <com.bit45.thespeedtester.MaterialRippleLayout
                android:layout_weight="0.5"
                android:id="@+id/result_detail_btn_delete"
                style="@style/RippleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:minHeight="48dp"
                android:padding="10dp"
                app:rippleColor="@color/main_color_grey_400"
                android:background="@color/cancel_button_background"
                >

            <com.bit45.thespeedtester.font.RobotoTextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/result_detail_text_button"
                android:text="@string/dlg_button_delete"
                android:textColor="@color/main_text"
                app:typeface="robotoMedium"/>

            </com.bit45.thespeedtester.MaterialRippleLayout>

            <!-- DONE BUTTON -->
            <com.bit45.thespeedtester.MaterialRippleLayout
                android:layout_weight="0.5"
                android:layout_toRightOf="@id/result_detail_btn_delete"
                android:id="@+id/result_detail_btn_done"
                style="@style/RippleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:minHeight="48dp"
                android:padding="10dp"
                app:rippleColor="@color/main_color_grey_400"
                android:background="@color/start_button_background"
                >

                <com.bit45.thespeedtester.font.RobotoTextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/result_detail_text_button"
                    android:text="@string/dlg_button_done"
                    android:textColor="@color/main_text"
                    app:typeface="robotoMedium"/>

            </com.bit45.thespeedtester.MaterialRippleLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
